Started work to store bookmark data in browser.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<div class="bookmarks-container">
-  <app-bookmarks *ngFor="let bookmarks of bookmarkGroups" [bookmarks]="bookmarks"></app-bookmarks>
-</div>
+<app-topbar></app-topbar>
+<router-outlet></router-outlet>
