--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 /* You can add global styles to this file, and also import other style files */
 body {
 	margin: 0px;
@@ -6,3 +8,10 @@ body {
 	font-family: 'Hack';
 	color: #888;
 }
+
+app-root {
+	height: 100vh;
+	width: 100vw;
+	display: block;
+}
+html, body { height: 100%; }
