--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,6 +1,11 @@
 <div class="bookmark-container">
-  <h2 class="{{bookmarks.color}}">{{bookmarks.label}}</h2>
-  <ul>
-    <li *ngFor="let link of bookmarks.links"><img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
-  </ul>
+  <ng-container *ngIf="!editing">
+    <h2 class="{{bookmarks.color}}">{{bookmarks.label}}</h2>
+    <ul>
+      <li *ngFor="let link of bookmarks.links"><img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
+    </ul>
+  </ng-container>
+  <div class="editable" *ngIf="editing">
+    <input type="text" name="label" placeholder="Label">
+  </div>
 </div>
