--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,11 +1,45 @@
 <div class="bookmark-container">
   <ng-container *ngIf="!editing">
-    <h2 class="{{bookmarks.color}}">{{bookmarks.label}}</h2>
+    <h2 class="{{bookmarkGroup.color}}">{{bookmarkGroup.label}}</h2>
     <ul>
-      <li *ngFor="let link of bookmarks.links"><img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
+      <li *ngFor="let link of bookmarkGroup.links"><img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
     </ul>
   </ng-container>
   <div class="editable" *ngIf="editing">
-    <input type="text" name="label" placeholder="Label">
+    <form class="new-bookmark-form" (submit)="doSubmit($event)">
+      <div class="top-form-content">
+        <mat-form-field>
+          <input matInput placeholder="Group Label" name="bookmarkGroup.label" [(ngModel)]="bookmarkGroup.label">
+        </mat-form-field>
+        <button mat-mini-fab aria-label="Remove group icon" (click)="clickRemoveGroup()">
+          <mat-icon>delete_forever</mat-icon>
+        </button>
+        <mat-form-field>
+          <mat-label>Label Color</mat-label>
+          <mat-select [(value)]="bookmarkGroup.color">
+            <mat-option *ngFor="let color of colors" [value]="color">
+              {{color}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <div>&nbsp;</div>
+        <label>Links</label>
+        <button mat-mini-fab aria-label="Add link icon" (click)="clickAddLink()">
+          <mat-icon>insert_link</mat-icon>
+        </button>
+      </div>
+      <ul *ngIf="bookmarkGroup.links.length > 0">
+        <li class="link-row" *ngFor="let link of bookmarkGroup.links">
+          <span class="link-data" (click)="clickEditLink(link)">
+            <img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;
+            {{link.label}}
+          </span>
+          <mat-icon class="link-delete" (click)="clickRemoveLink(link)">remove</mat-icon>
+        </li>
+      </ul>
+      <span *ngIf="bookmarkGroup.links.length === 0">
+        No links yet!
+      </span>
+    </form>
   </div>
 </div>
