--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -3,7 +3,7 @@
     Loading...
   </ng-container>
   <ng-container *ngIf="!loading">
-    <app-bookmarks *ngFor="let bookmarks of bookmarkGroups" [bookmarks]="bookmarks" editing="true"></app-bookmarks>
+    <app-bookmarks *ngFor="let bookmarkGroup of bookmarkGroups" [(bookmarkGroup)]="bookmarkGroup" editing="true" (removeGroup)="doRemoveGroup(bookmarkGroup)"></app-bookmarks>
     <div class="add-container" (click)="clickAdd()">
       <mat-icon>add</mat-icon>
       <div>Add Group</div>
