--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'theme';
 
-/* You can add global styles to this file, and also import other style files */
 body {
 	margin: 0px;
 	padding: 0px;
