--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="!editing">
     <h2 class="{{bookmarkGroup.color}}">{{bookmarkGroup.label}}</h2>
     <ul>
-      <li *ngFor="let link of bookmarkGroup.links"><img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
+      <li *ngFor="let link of bookmarkGroup.links"><img src="{{link.icon}}" width="16" height="16">&nbsp;<a href="{{link.url}}" target="_blank">{{link.label}}</a></li>
     </ul>
   </ng-container>
   <div class="editable" *ngIf="editing">
@@ -31,7 +31,7 @@
       <ul *ngIf="bookmarkGroup.links.length > 0">
         <li class="link-row" *ngFor="let link of bookmarkGroup.links">
           <span class="link-data" (click)="clickEditLink(link)">
-            <img src="{{link.url}}/favicon.ico" width="16" height="16">&nbsp;
+            <img src="{{link.icon}}" width="16" height="16">&nbsp;
             {{link.label}}
           </span>
           <mat-icon class="link-delete" (click)="clickRemoveLink(link)">remove</mat-icon>
